--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
-node_modules
 .DS_Store
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-npm-debug.log.*
-yarn-debug.log.*
-yarn-error.log.*
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
