--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/smilee/proto-ui#readme",
   "dependencies": {
     "core-js": "^2.6.5",
+    "tailwindcss": "1.0.4",
     "vue": "^2.6.10"
   },
   "devDependencies": {
