--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "proto-ui",
-  "version": "1.0.0-beta.7",
+  "version": "1.0.0-beta.8",
   "description": "Prototype UI",
-  "main": "lib/proto-ui.common.js",
+  "main": "dist/proto-ui.common.js",
   "files": [
-    "lib",
+    "dist",
     "src",
     "packages"
   ],
