--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proto-ui",
-  "version": "1.0.0-beta.11",
+  "version": "1.0.0",
   "description": "Prototype UI",
   "main": "src/index.js",
   "files": [
