--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proto-ui",
-  "version": "1.0.1",
+  "version": "1.0.2-beta.0",
   "description": "Prototype UI",
   "main": "src/index.js",
   "files": [
